--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <nav class="header__nav nav">
                 <ul class="nav__list">
                     <li class="nav__el">
-                        <img class="nav__burgerIcon" src="icons/burger.svg" alt="Меню">
+                        <button class="nav__button burger"></button>
                     </li>
                     <li class="nav__el xs--hidden nav__el--divider">
                         <img class="nav__dividerIcon1 xs--hidden" src="icons/divider.svg" alt="">
@@ -22,22 +22,22 @@
                         </a>
                     </li>
                     <li class="nav__el xs--hidden" >
-                        <img class="nav__callIcon" src="icons/call.svg" alt="Звонок">
+                        <button class="nav__button call"></button>
                     </li>
                     <li class="nav__el xs--hidden" >
-                        <img class="nav__chatIcon" src="icons/chat.svg" alt="Чат">
+                        <button class="nav__button chat"></button>
                     </li>
                     <li class="nav__el xs--hidden" >
-                        <img class="nav__profileIcon" src="icons/profile.svg" alt="Профиль">
+                        <button class="nav__button profile"></button>
                     </li>
                     <li class="nav__el nav__el--divider">
                         <img class="nav__dividerIcon2" src="icons/divider.svg" alt="">
                     </li>
                     <li class="nav__el">
-                        <img class="nav__repairIcon" src="icons/repair.svg" alt="Вкладка починки">
+                        <button class="nav__button repair"></button>
                     </li> 
                     <li class="nav__el">
-                        <img class="nav__checkStatusIcon" src="icons/checkstatus.svg" alt="Проверить статус">
+                        <button class="nav__button checkStatus"></button>
                     </li>
                 </ul>
             </nav>
@@ -101,10 +101,10 @@
                     техники Dell. Только у нас вы можете отремонтировать свой ноутбу
                     к Dell с официальной гарантией производителя.
                 </p>
-                <div class="info__readMore readMore">
+                <button class="info__readMore readMore">
                     <img class="readMore__expandIcon" src="icons/expand.svg" alt="">
                     <span class="readMore__text">Читать далее</span>
-                </div>
+                </button>
                 <img class="info__img" src="imgs/firstPic.png" alt="">
             </article>
         </main>
