--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
                         <button class="nav__button burger"></button>
                     </li>
                     <li class="nav__el xs--hidden nav__el--divider">
-                        <img class="nav__dividerIcon1 xs--hidden" src="icons/divider.svg" alt="">
                     </li>
-                    <li class="nav__el nav__el--logo">
-                        <a href="https://mihairu-code.github.io/maket_1_3_by_Garpennikov/">
-                            <img class="nav__logo" src="imgs/Group.svg" alt="Логотип компании">
-                        </a>
+                    <li class="nav__el">
+                        <a href="https://mihairu-code.github.io/maket_1_3_by_Garpennikov/" class="nav__el--logo"></a>
                     </li>
                     <li class="nav__el xs--hidden" >
                         <button class="nav__button call"></button>
@@ -31,7 +28,6 @@
                         <button class="nav__button profile"></button>
                     </li>
                     <li class="nav__el nav__el--divider">
-                        <img class="nav__dividerIcon2" src="icons/divider.svg" alt="">
                     </li>
                     <li class="nav__el">
                         <button class="nav__button repair"></button>
